--- a/web/index.html
+++ b/web/index.html
@@ -55,8 +55,9 @@
     </nav>
 
     <main role="main" class="container">
-        <div class="starter-template row">
-            <h1>Upload your Files: </h1>
+        <div id='problemDescription' class="starter-template row border">
+        </div>
+        <div class="w-100" style="padding-bottom: 20px;">
         </div>
         <form id="contestSubmitForm">
             <div class="form-group">
@@ -80,7 +81,7 @@
         <!-- Test Result History -->
         <div class="row justify-content-between">
             <div class="col" id="testRunId">
-                RunId: 
+                RunId:
             </div>
             <div class="col-2" id="testSummary">
                 Pass: 10/10
@@ -117,6 +118,7 @@
         crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
         crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/showdown/1.8.6/showdown.min.js" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
     <script src="./scripts/main.js"></script>
